Cleaning routes. Adding html rendering for modules list.

--- a/app/views/Application/modules.html
+++ b/app/views/Application/modules.html
@@ -1,4 +1,4 @@
 #{extends 'main.html' /}
 #{set title:'Play-repo' /}
 
-<h1>Welcome on the Play-repo repository.</h1>
+<h1>Listing all modules on the repository.</h1>
