--- a/app/views/main.html
+++ b/app/views/main.html
@@ -1,16 +1,23 @@
 <!DOCTYPE html>
-
 <html>
     <head>
         <title>#{get 'title' /}</title>
         <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
         <link rel="stylesheet" type="text/css" media="screen" href="@{'/public/stylesheets/main.css'}">
+        <link rel="stylesheet" type="text/css" media="screen" href="@{'/public/stylesheets/wiki.css'}">
         #{get 'moreStyles' /}
         <link rel="shortcut icon" type="image/png" href="@{'/public/images/favicon.png'}">
         <script src="@{'/public/javascripts/jquery-1.4.2.min.js'}" type="text/javascript" charset="utf-8"></script>
         #{get 'moreScripts' /}
     </head>
     <body>
+        <div id="header">
+            <div class="wrapper">
+                <h1 id="logo">
+                    <a href="/" muse_scanned="true">Playframework</a>
+                </h1>
+            </div>
+        </div>
         #{doLayout /}
     </body>
 </html>
