--- a/app/views/Admin/show.html
+++ b/app/views/Admin/show.html
@@ -1,6 +1,8 @@
 #{extends 'main.html' /}
 #{set title:'Module' /}
 
+<p>#{a @Admin.index()}Back to Module Administration index#{/a}</p>
+
 <div>
 <h1>Module ${module.name}</h1>
 <h2>${module.fullname}</h2>
@@ -67,7 +69,5 @@
       }
     });
 </script>
-
-<p>#{a @Admin.index()}Back to Modules index#{/a}</p>
 
 </div>
