--- a/app/views/content.html
+++ b/app/views/content.html
@@ -9,6 +9,9 @@
 <div class="wrapper">
     <div id="submenu">
         <h2>Menu</h2>
+        #{if session.contains("user")}
+            <p>Welcome ${session.get("user")}</p><BR/>
+        #{/if}
         <ul class="sidemenu">
             <li>#{a @Application.index()}Home#{/a}</li>
             <li>#{a @Application.modules()}List all the modules#{/a}</li>
@@ -16,11 +19,11 @@
         </ul>
         <br />
         <ul class="sidemenu">
-            #{if !session.contains("username")}
-                <li>#{a @Secure.login()}Login#{/a}</li>
+            #{if !session.contains("user")}
+                <li>#{a @Security.login()}Login#{/a}</li>
             #{/if}
             #{else}
-                <li>#{a @Secure.logout()}Logout#{/a}</li>
+                <li>#{a @Security.logout()}Logout#{/a}</li>
             #{/else}
         </ul>
     </div>
