--- a/public/stylesheets/main.css
+++ b/public/stylesheets/main.css
@@ -235,23 +235,6 @@ a:hover {
    background: #dedede;
 }
 
-/*#introduction {
-    width: 600px;
-    color: #1e4432;
-    text-shadow: rgba(255, 255, 255, 0.4) 1px 1px 0px; 
-}
-
-#introduction h2 {
-    font-weight: lighter;
-    font-size: 24px;
-    line-height: 1.4em;
-}
-
-#introduction p {
-    margin: 1em 0;
-    line-height: 1.4em;
-    font-size: 14px;
-}*/
 #introduction h2 {
     font-weight: lighter;
     font-size: 24px;
@@ -261,16 +244,6 @@ a:hover {
 #introduction p {
     margin: 1em 0 1.5em;
     line-height: 1.4em;
-}
-
-#video {
-    position: absolute;
-}
-#video:after {
-    content: url('/public/images/video-shadow.png');
-    position: absolute;
-    top: 337px;
-    left: 0;
 }
 
 #side {
@@ -351,10 +324,6 @@ a:hover {
     position: absolute;
     left: 0;
 }
-
-
-
-
 
 #activity {
     float: right;
@@ -569,55 +538,6 @@ a:hover {
     top: 7px;
 }
 
-#twitter li {
-    margin-bottom: 15px;
-    position: relative;
-}
-
-#twitter li .twit {
-    background: #777;
-    background: -webkit-gradient(linear, left top, left bottom, from(#555), to(#777));;
-    color: #ccc;
-    text-shadow: #444 -1px -1px 0px; 
-    padding: 10px;
-    margin-bottom: 5px;
-    line-height: 1.2em;
-    word-wrap: break-word !important;
-    display: block;
-    -webkit-box-shadow: rgba(255,255,255,.5) -1px -1px 0px;
-    -moz-box-shadow: rgba(255,255,255,.5) -1px -1px 0px;
-    -webkit-border-radius: 3px;
-    -moz-border-radius: 3px;
-    border-radius: 3px;
-    font-size: 12px;
-}
-
-#twitter li a {
-    color: #fff;
-}
-
-#twitter li .arrow {
-    border-top: 16px solid #777;
-    border-left: none;
-    border-right: 16px solid transparent;
-    border-bottom: none;
-    height: 0px;
-    margin-left: auto;
-    margin-right: auto;
-    position: absolute;
-    bottom: 30px;
-    left: 40px;
-    width: 1px;
-}
-
-#twitter li .said {
-    position: relative;
-    top: -10px;
-    left: 20px;
-    font-size: 11px;
-    color: #888;
-}
-
 /** Events **/
 
 #events h2 {
@@ -668,4 +588,48 @@ a:hover {
 #modules .by {
     font-size: 14px;
     font-weight: normal;
+}
+
+/* BUTTONS */
+
+.buttons a, .buttons button {
+    margin:0 7px 0 0;
+    background-color:#f5f5f5;
+    border:1px solid #bebebe;
+    border-top:1px solid #ddd;
+    border-left:1px solid #ddd;
+
+    font-family:"Lucida Grande", Tahoma, Arial, Verdana, sans-serif;
+    font-size:100%;
+    line-height:130%;
+    text-decoration:none;
+    font-weight:bold;
+    color:#565656;
+    cursor:pointer;
+    padding:5px 10px 6px 7px; /* Links */
+    margin-top: 10px;
+}
+.buttons button{
+    width:auto;
+    overflow:visible;
+    padding:4px 10px 3px 7px; /* IE6 */
+}
+.buttons button[type]{
+    padding:5px 10px 5px 7px; /* Firefox */
+    line-height:17px; /* Safari */
+}
+*:first-child+html button[type]{
+    padding:4px 10px 3px 7px; /* IE7 */
+}
+.buttons button img, .buttons a img {
+    margin:0 3px -3px 0 !important;
+    padding:0;
+    border:none;
+    width:16px;
+    height:16px;
+}
+
+.addModule {
+    display:block;
+    float:left;
 }
