--- a/app/views/Admin/index.html
+++ b/app/views/Admin/index.html
@@ -10,7 +10,7 @@
     <div class="module">
         <h2>[${module.name}]&nbsp;${module.fullname} [#{a @Admin.delete(module.id)}Delete#{/a}]</h2>
         <p>${module.description}</p>
-        <p>#{a @Application.module(module.name)}Get details and versions#{/a}</p>
+        <p>#{a @Admin.show(module.id)}Get details and versions#{/a}</p>
     </div>
 #{/list}
 #{else}
