--- a/app/views/Security/login.html
+++ b/app/views/Security/login.html
@@ -11,7 +11,7 @@
     <p style="color:red;font-weight: bold;">${flash.error}</p>
 #{/if}
 
-#{form @Security.authenticate()}
+#{form @@Security.authenticate()}
     <label for="user">What's your OpenID?</label>
     <input type="text" name="user" id="user"/>
     <input type="submit" value="login..."/>
