--- a/public/stylesheets/main.css
+++ b/public/stylesheets/main.css
@@ -591,8 +591,7 @@ a:hover {
 }
 
 /* BUTTONS */
-
-.buttons a, .buttons button {
+a.buttons, button.buttons {
     margin:0 7px 0 0;
     background-color:#f5f5f5;
     border:1px solid #bebebe;
@@ -609,32 +608,35 @@ a:hover {
     padding:5px 10px 6px 7px; /* Links */
     margin-top: 10px;
 }
-.buttons button{
+button.buttons {
     width:auto;
     overflow:visible;
     padding:4px 10px 3px 7px; /* IE6 */
 }
-.buttons button[type]{
+button[type].buttons {
     padding:5px 10px 5px 7px; /* Firefox */
     line-height:17px; /* Safari */
 }
 *:first-child+html button[type]{
     padding:4px 10px 3px 7px; /* IE7 */
 }
-.buttons button img, .buttons a img {
-    margin:0 3px -3px 0 !important;
-    padding:0;
-    border:none;
-    width:16px;
-    height:16px;
+
+#addModule form, #addVersion form {
+	padding: 0 5px;
+	margin: 10px;
+    border: 1px solid #aaa;
+    border-radius: 5px;
+    -moz-border-radius: 5px;
+    -webkit-border-radius: 5px;
 }
 
-.addModule {
-    display:block;
-    float:left;
+#addModule div input, #addVersion div input {
+	margin-left: 50px;
 }
 
-.addVersion {
-    display:block;
-    float:left;
+#addModule #submit button, #addVersion #submit button {
+    float: right;
+    vertical-align: middle;
+    margin-top: 5px;
+    margin-bottom: 10px;
 }
