--- a/public/stylesheets/main.css
+++ b/public/stylesheets/main.css
@@ -578,9 +578,9 @@ a:hover {
     padding: 10px;
 }
 
-.classicForm .error {
+.error {
     color: #c00;
-    font-size: 13px;
+    font-weight: bold;
 }
 
 /** Modules **/
